[gd_scene load_steps=7 format=3 uid="uid://6gma2j1v16q1"]

[ext_resource type="Texture2D" uid="uid://gx2o0x538c0n" path="res://textures/winner.png" id="1_h8luh"]
[ext_resource type="FontFile" uid="uid://c1makj6cvdpst" path="res://Fonts/Staatliches-Regular.ttf" id="2_rp148"]
[ext_resource type="FontFile" uid="uid://bjq455yadsbg3" path="res://Fonts/PrincessSofia-Regular.ttf" id="3_fl88i"]
[ext_resource type="StyleBox" uid="uid://da76i8m3p7n0l" path="res://Materials/button_style.tres" id="4_jdskm"]
[ext_resource type="StyleBox" uid="uid://bnevn0320slmw" path="res://Materials/button_hover_style.tres" id="5_gcnc2"]
[ext_resource type="Script" path="res://UI/GameWin.gd" id="6_sxjyn"]

[node name="GameWinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_sxjyn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 728.0
offset_top = 80.0
offset_right = 993.0
offset_bottom = 208.0
scale = Vector2(1.84, 3.52)
texture = ExtResource("1_h8luh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 736.0
offset_top = 531.0
offset_right = 1078.0
offset_bottom = 910.0
scale = Vector2(1.41863, 1.07735)

[node name="BallHitsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rp148")
theme_override_font_sizes/font_size = 50
text = "ball hits:"

[node name="FinalTimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rp148")
theme_override_font_sizes/font_size = 50
text = "Final time:"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fl88i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("4_jdskm")
theme_override_styles/hover = ExtResource("5_gcnc2")
text = "Restart
"

[node name="NextLvlButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_fl88i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("4_jdskm")
theme_override_styles/hover = ExtResource("5_gcnc2")
text = "Continue"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fl88i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("4_jdskm")
theme_override_styles/hover = ExtResource("5_gcnc2")
text = "Main menu
"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NextLvlButton" to="." method="_on_next_lvl_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
